--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a{text-decoration: none;}
 
 h1, h2, h3, h4, h5{color:#000; padding-bottom: 30px;}
 
-p{line-height: 28px; font-weight: 300;}
+p{line-height: 28px; font-weight: 300; text-align: justify;}
 
 .big-text{font-size: 70px;font-weight: 900;}
 .med-text{font-size: 40px;}
@@ -31,13 +31,6 @@ p{line-height: 28px; font-weight: 300;}
 
 .button{padding: 18px 28px; background: #316bff; color:#fff; display: inline-block;border-radius: 4px}
 
-@media (max-width: 768px) {
-
-  .big-text{font-size: 40px;}
-  .med-text{font-size: 30px;}
-}
-
-
 .container {
   margin: 0 auto;
   padding: 0 15px;
@@ -47,6 +40,29 @@ p{line-height: 28px; font-weight: 300;}
   flex-wrap: wrap;
 }
 
+@media (max-width: 1250px) {
+
+  .container{padding: 0 100px;}
+}
+
+@media (max-width: 768px) {
+
+  .big-text{font-size: 50px;}
+  .med-text{font-size: 30px;}
+
+  .container{padding: 0 50px;}
+}
+
+@media (max-width: 450px) {
+
+  .big-text{font-size: 45px;}
+  .med-text{font-size: 25px;}
+  .normal-text{font-size: 16px;}
+  
+  p{line-height: 22px;}
+
+  .container{padding: 0 25px;}
+}
 
 
 /* ! Menu */
@@ -87,9 +103,10 @@ p{line-height: 28px; font-weight: 300;}
     overflow: hidden;transition: all 1s cubic-bezier(.215, .61, .355, 1); transform: translateX(101%); 
     border-left: 1px solid #999; border-top: 1px solid #999;
   }
+  
 
   .header__menu li{width: 100%;border-bottom: 1px solid #999}
-  .menu-open .header__menu{transform: translateX(0%);border: 1px solid red;}
+  .menu-open .header__menu{transform: translateX(0%);}
 
   .icon-hamburger{height: 50px;width: 40px;margin-left: 20px;padding-top: 5px;}
   .icon-hamburger span{height: 2px; width: 30px;background: var(--menu-color);position: relative;display: block;margin-top: 11px;transition: all 0.2s cubic-bezier(.215, .61, .355, 1);}
@@ -148,7 +165,7 @@ p{line-height: 28px; font-weight: 300;}
 }
 .hero__img img{object-fit: cover; width: 100%;height: 100%;}
 
-@media (max-width: 768px) {
+@media (max-width: 1250px) {
   .hero{flex-direction: column-reverse}
 
   .hero__content{text-align: center;}
@@ -158,6 +175,7 @@ p{line-height: 28px; font-weight: 300;}
 
 .about {
   display: flex; align-items: center; justify-content: space-between;
+  width: 100%;
   flex-flow: row;
   flex-wrap: wrap;
 }
@@ -179,7 +197,7 @@ p{line-height: 28px; font-weight: 300;}
   padding: 1.5em;display: flex;flex-direction: column;
 }
 .about__right__item:hover {
-  cursor: default;
+  cursor: pointer;
   transform: translateY(-5px);
   border: 1px solid var(--color-secondary);
   box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
@@ -308,6 +326,23 @@ p{line-height: 28px; font-weight: 300;}
   color: var(--color-grey-2);
 }
 
+@media (max-width: 1250px) {
+
+  .about{flex-flow: column;}
+
+  .about__left{width: 100%;}
+  .about__right{width: 100%; margin-top: 50px;}
+
+  .about-stats__grid{grid-template-columns: repeat(1, 1fr);}
+
+}
+
+@media (max-width: 450px) {
+
+  .about__right{grid-template-columns: repeat(1, 1fr);}
+}
+
+
 
 /* ! Portfolio */
 .blue_bg {
@@ -362,10 +397,16 @@ p{line-height: 28px; font-weight: 300;}
 }
 
 .overlay:hover{
+  cursor: pointer;
   opacity: 1;
 }
 
+@media (max-width: 768px) {
+  .portfolio{flex-flow: column; align-items: center}
 
+  .portfolio__column{width: 75%;}
+
+}
 
 
 
