--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   .hero{flex-direction: column-reverse}
 
   .hero__content{text-align: center;}
+
+  .hero__img{width: 200px; height: 200px;}
 }
 
 /* ! About */
@@ -406,15 +408,46 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
 
   .portfolio__column{width: 75%;}
 
+  .port_item_small{min-height: 300px; max-height: 300px;}
+  .port_item_big{min-height: 300px; max-height: 300px;}
+
 }
 
 
 
 
 
+/* ! Contact Me */
+.black_bg {
+  position: relative;
+  background-color: #000;
+  color:#fff;
+}
 
+.black_bg h1,
+.black_bg p {color: #fff;}
 
+.contact {
+  width: 100%;
+  position: relative;
+  display: flex; flex-flow: column; flex-wrap: wrap; justify-content: space-between;
+}
 
+.contact-item {
+  width: 60%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contact-item .icon {
+  display: flex;
+  align-items: center;
+}
+
+.contact-item .icon span + span {
+  margin-left: 20px;
+}
 
 
 
@@ -428,28 +461,21 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
 
 .main-btn {
   margin: 30px 0;
-  border-radius: 30px;
+  border-radius: 10px;
+  padding: 10px 20px;
   color: inherit;
-  font-weight: 600;
   position: relative;
+  font-weight: 600;
   border: 2px solid var(--color-secondary);
   display: flex;
   align-self: flex-start;
   align-items: center;
   overflow: hidden;
 }
-.main-btn .btn-text {
-  font-weight: 500;
-  padding: 10px 30px;
+.main-btn span + span {
+  margin-left: 20px;
 }
-.main-btn .btn-icon {
-  background-color: var(--color-secondary);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  padding: 25px;
-}
+
 .main-btn::before {
   content: "";
   position: absolute;
