--- a/style.css
+++ b/style.css
@@ -33,11 +33,13 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
 
 .container {
   margin: 0 auto;
+  height: 100%;
   padding: 0 15px;
   max-width: 1350px;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 @media (max-width: 1250px) {
@@ -85,13 +87,11 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   z-index: 9999; 
   width: 100%; 
   height: 70px;
-  padding: 15px 15px; }
-
-.header__content{max-width: 1200px;width: 100%;margin: 0 auto; display: flex;justify-content: space-between;}
-
+  padding: 15px 0px; }
+  
 .header__quick{display: flex; align-items: center;color:var(--menu-color)}
 
-.header__menu{padding: 0;margin: 0;}
+.header__menu{padding: 0;margin: 0; display: flex; align-items: center;}
 .header__menu li{display: inline-block;}
 .header__menu li a{color:var(--menu-color); opacity: 1;display: block;padding: 16px;font-size: 18px;}
 
@@ -99,22 +99,22 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
 
 @media (max-width: 768px) {
   .header__menu{
-    position: absolute; top:70px; right:0; background-color: var(--menu-bg); width: 90%; height: 100vh;  
+    position: absolute; top:100px; right:0; background-color: var(--menu-bg); width: 100%; 
     overflow: hidden;transition: all 1s cubic-bezier(.215, .61, .355, 1); transform: translateX(101%); 
-    border-left: 1px solid #999; border-top: 1px solid #999;
+    border-left: 1px solid #999; border-top: 1px solid #999; flex-direction: column;
   }
   
 
   .header__menu li{width: 100%;border-bottom: 1px solid #999}
   .menu-open .header__menu{transform: translateX(0%);}
 
-  .icon-hamburger{height: 50px;width: 40px;margin-left: 20px;padding-top: 5px;}
+  .icon-hamburger{height: 40px;width: 40px;padding-top: 5px;}
   .icon-hamburger span{height: 2px; width: 30px;background: var(--menu-color);position: relative;display: block;margin-top: 11px;transition: all 0.2s cubic-bezier(.215, .61, .355, 1);}
   
   .menu-open .icon-hamburger span:nth-child(1){transform: rotate(45deg) translateY(9px);}
   .menu-open .icon-hamburger span:nth-child(2){transform: rotate(-45deg) translateY(-9px);}
   
-  .header__quick{display: flex; justify-content: flex-end; width: 50%;}
+  .header__quick{display: flex; justify-content: space-evenly; width: 100%;}
 
 }
 
