--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   .menu-open .icon-hamburger span:nth-child(1){transform: rotate(45deg) translateY(9px);}
   .menu-open .icon-hamburger span:nth-child(2){transform: rotate(-45deg) translateY(-9px);}
   
-  .header__quick{display: flex; justify-content: space-evenly; width: 100%;}
+  .header__quick{display: flex; justify-content: space-between; width: 100%;}
 
 }
 
@@ -235,7 +235,7 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
 }
 
 
-
+/*Code skills*/
 .about-stats {width: 100%; margin: 75px 0;}
 
 .about-stats__grid {display: grid;grid-template-columns: repeat(2, 1fr);grid-gap: 2rem;}
@@ -275,24 +275,32 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
 
 
 /*Timeline*/
-.timeline {
-  border: 1px solid red;
-  margin: 75px 0;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
-  padding-bottom: 3rem;
-}
-.timeline .timeline-item {
-  position: relative;
-  padding-left: 3rem;
-  border-left: 1px solid var(--color-grey-5);
-}
-.timeline .timeline-item .tl-icon {
+.timeline {margin: 75px 0; width: 100%;}
+.timeline::before {
+  content: "";
   position: absolute;
-  left: -27px;
-  top: 0;
+  left: 50%;
+  top: -20px;
+  width: 40%;
+  height: 1px;
+  background-color: var(--color-grey-2);
+  transform: translateX(-50%);
+}
+
+.timeline__grid {display: grid;grid-template-columns: repeat(2, 1fr);grid-gap: 4rem;}
+
+.timeline-item {
+  position: relative;
+  margin-left: 25px;
+  padding-left: 40px;
+  border-left: 2px solid var(--color-grey-2);
+}
+
+.timeline-icon {
+  position: absolute;
+  color: #fff;
+  left: -25px;
+  top: 0px;
   background-color: var(--color-secondary);
   width: 50px;
   height: 50px;
@@ -301,10 +309,10 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   align-items: center;
   justify-content: center;
 }
-.timeline .timeline-item .tl-icon i {
-  font-size: 1.3rem;
-}
-.timeline .timeline-item .tl-duration {
+
+.timeline-icon i {font-size: 1.3rem;}
+
+.timeline-duration {
   padding: 0.2rem 0.6rem;
   background-color: var(--color-grey-5);
   border-radius: 15px;
@@ -313,20 +321,9 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   text-transform: uppercase;
   font-weight: 500;
 }
-.timeline .timeline-item h5 {
-  padding: 1rem 0;
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  font-weight: 600;
-}
-.timeline .timeline-item h5 span {
-  color: var(--color-grey-2);
-  font-weight: 500;
-  font-size: 1.2rem;
-}
-.timeline .timeline-item p {
-  color: var(--color-grey-2);
-}
+.timeline-item h1 {padding: 5px 0px;text-transform: uppercase;}
+.timeline-item span {color: var(--color-grey-2);font-weight: 500;}
+.timeline-item p {color: var(--color-grey-2); margin: 0px;}
 
 @media (max-width: 1250px) {
 
@@ -440,14 +437,10 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   align-items: center;
   justify-content: space-between;
 }
-.contact-item .icon {
-  display: flex;
-  align-items: center;
-}
 
-.contact-item .icon span + span {
-  margin-left: 20px;
-}
+.contact-item .icon {display: flex; align-items: center;}
+.contact-item i {font-size: 1.3rem;}
+.contact-item .icon span + span {margin-left: 20px;}
 
 
 
@@ -472,9 +465,8 @@ p{line-height: 28px; font-weight: 300; text-align: justify;}
   align-items: center;
   overflow: hidden;
 }
-.main-btn span + span {
-  margin-left: 20px;
-}
+
+.main-btn span + span {margin-left: 20px;}
 
 .main-btn::before {
   content: "";
